# Llm-android

./: README.md  build.gradle  gradlew.bat  settings.gradle
.github/workflows/: android-build.yml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
